--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     }
   },
   "include": [
-    "next-env.d.ts",
+    "src/next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
